--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_screenutil: ^5.9.0
+  d: ^0.0.1+1
+  go_router: ^12.1.1
 
 dev_dependencies:
   flutter_test:
