--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_screenutil: ^5.9.0
   d: ^0.0.1+1
   go_router: ^12.1.1
+  styled_widget: ^0.4.1
 
 dev_dependencies:
   flutter_test:
