--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ flutter:
         - asset: assets/fonts/Pretendard-Thin.otf
           weight: 100
         - asset: assets/fonts/Pretendard-ExtraLight.otf
+          weight: 200
         - asset: assets/fonts/Pretendard-Light.otf
           weight: 300
         - asset: assets/fonts/Pretendard-Regular.otf
