--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   d: ^0.0.1+1
   go_router: ^12.1.1
   styled_widget: ^0.4.1
+  flutter_svg: ^2.0.9
 
 dev_dependencies:
   flutter_test:
