--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,10 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/image/
+
   fonts:
     - family: Pretendard
       fonts:
