--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   go_router: ^12.1.1
   styled_widget: ^0.4.1
   flutter_svg: ^2.0.9
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
