--- a/.github/workflows/discord-notification.yml
+++ b/.github/workflows/discord-notification.yml
@@ -10,7 +10,7 @@ jobs:
       uses: sarisia/actions-status-discord@v1
       with:
         title: "I DON'T EVER GIVE UP"
-        content: "<@1154312210705821756>"
+        content: "<@&1154312210705821756>"
         webhook: ${{ secrets.DISCORD_WEBHOOK }}
         color: 000000
-        image: "https://media.tenor.com/7fSQ8RYoBC0AAAAd/this-is-elon-musk.gif"
+        image: ${{ secrets.IMAGE_URL }}
