--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_svg: ^2.0.9
   styled_widget: ^0.4.1
   go_router: ^12.1.1
+  flutter_riverpod: ^2.4.9
 
 dev_dependencies:
   flutter_test:
