--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,9 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/image/
+    - assets/image/core_icon/
+    - assets/image/sign_up_icon/
+    - assets/image/bottom_navigation_bar_icon/
 
   fonts:
     - family: Pretendard
