--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,12 +18,18 @@ dependencies:
   flutter_svg: ^2.0.9
   styled_widget: ^0.4.1
   go_router: ^12.1.1
+  pedometer: ^4.0.1
+  flutter_riverpod: ^2.4.9
+  freezed: ^2.4.6
+  freezed_annotation: ^2.4.1
+  build_runner: ^2.4.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+  json_serializable: ^6.7.1
 
 flutter:
   uses-material-design: true
