--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,9 +18,8 @@ dependencies:
   styled_widget: ^0.4.1
   go_router: ^12.1.1
   pedometer: ^4.0.1
-  freezed: ^2.4.6
   freezed_annotation: ^2.4.1
-  build_runner: ^2.4.7
+  json_annotation: ^4.8.1
   flutter_riverpod: ^2.4.9
 
 dev_dependencies:
@@ -28,6 +27,8 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.7
+  freezed: ^2.4.6
   json_serializable: ^6.7.1
 
 flutter:
