--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ flutter:
     - assets/image/sign_up_icon/
     - assets/image/bottom_navigation_bar_icon/
     - assets/image/home_icon/
+    - assets/image/self_care_icon/
 
   fonts:
     - family: Pretendard
