➕ :: image path 수정

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ flutter:
     - assets/image/home_icon/
     - assets/image/pose_icon/
     - assets/image/pose_icon/pose_exercise/
-    - assets/image/core_icon/
+    - assets/image/self_care_icon/
 
   fonts:
     - family: Pretendard
