--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
   flutter_riverpod: ^2.4.9
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
