--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   json_annotation: ^4.8.1
   flutter_riverpod: ^2.4.9
   intl: ^0.19.0
+  camera: ^0.10.5+9
 
 dev_dependencies:
   flutter_test:
