--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_riverpod: ^2.4.9
   intl: ^0.19.0
   camera: ^0.10.5+9
+  fluttertoast: ^8.2.4
 
 dev_dependencies:
   flutter_test:
