--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   intl: ^0.19.0
   camera: ^0.10.5+9
   fluttertoast: ^8.2.4
+  firebase_core: ^2.24.2
+  google_sign_in: ^6.2.1
+  firebase_auth: ^4.16.0
 
 dev_dependencies:
   flutter_test:
