--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,12 +20,13 @@ dependencies:
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
   flutter_riverpod: ^2.4.9
-  intl: ^0.19.0
   camera: ^0.10.5+9
   fluttertoast: ^8.2.4
   firebase_core: ^2.24.2
   google_sign_in: ^6.2.1
   firebase_auth: ^4.16.0
+  table_calendar: ^3.0.9
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
