--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   intl: ^0.19.0
   firebase_auth: ^4.17.4
   google_sign_in: ^6.2.1
+  kakao_flutter_sdk_user: ^1.8.0
+  firebase_core: ^2.25.4
 
 dev_dependencies:
   flutter_test:
