--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:807718817116:ios:b6673dd4463d096f54c599",
-  "FIREBASE_PROJECT_ID": "maeumgagym-9c6b7",
-  "GCM_SENDER_ID": "807718817116"
+  "GOOGLE_APP_ID": "1:878566104031:ios:64228e91223d5b9377026a",
+  "FIREBASE_PROJECT_ID": "maeumgagym-5a9df",
+  "GCM_SENDER_ID": "878566104031"
 }
