--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,9 @@ dependencies:
   kakao_flutter_sdk_user: ^1.8.0
   firebase_core: ^2.25.4
   dio: ^5.4.0
-  vibration: ^1.8.4
-  just_audio: ^0.9.36
-  just_audio_background: ^0.0.1-beta.11
   numberpicker: ^2.1.2
   flutter_secure_storage: ^9.0.0
+  audioplayers: ^5.2.1
 
 dev_dependencies:
   flutter_test:
