--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   numberpicker: ^2.1.2
   flutter_secure_storage: ^9.0.0
   audioplayers: ^5.2.1
+  syncfusion_flutter_gauges: ^24.2.8
 
 dev_dependencies:
   flutter_test:
