--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   audioplayers: ^5.2.1
   syncfusion_flutter_gauges: ^24.2.8
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  hive_generator: ^2.0.1
 
 dev_dependencies:
   flutter_test:
