--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -15,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.maeumgagymFlutter</string>
+	<string>info.eunha.maeumgagymFlutter</string>
 	<key>PROJECT_ID</key>
 	<string>maeumgagym-412003</string>
 	<key>STORAGE_BUCKET</key>
