--- a/.github/workflows/internal-deploy-play-store.yaml
+++ b/.github/workflows/internal-deploy-play-store.yaml
@@ -16,7 +16,8 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.20.0'
+          flutter-version: '3.16.9'
+          channel: 'stable'
 
       - name: Install dependencies
         run: flutter pub get
