--- a/.github/workflows/internal-deploy-play-store.yaml
+++ b/.github/workflows/internal-deploy-play-store.yaml
@@ -34,7 +34,6 @@ jobs:
           echo "${{ secrets.MAEUMGAGYM_KEY }}" | base64 --decode > maeumgagym-key.jks
           echo "${{ secrets.SERVICE_ACCOUNT }}" | base64 --decode > serviceAccount.json
           ls
-      
 
       - name: Install dependencies
         run: flutter pub get
@@ -47,3 +46,14 @@ jobs:
         run: |
           cd android
           fastlane internal
+          - name: Discord Webhook Action
+
+      - name: Discord Webhook Action
+        uses: sarisia/actions-status-discord@v1
+        if: ${{ ! startsWith(github.event.head_commit.message, '!!') }}
+        with:
+          title: 🔥 Internal Track Deploy
+          description: "# 내부트랙에 앱이 배포되었습니다.️"
+          content: "<@&1153326597844238366>"
+          webhook: ${{ secrets.DISCORD_WEBHOOK }}
+          color: FFFFFF
