--- a/.github/workflows/internal-deploy-play-store.yaml
+++ b/.github/workflows/internal-deploy-play-store.yaml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
@@ -73,6 +75,8 @@ jobs:
           cd android
           fastlane internal
           - name: Discord Webhook Action
+        env:
+          GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
       - name: Discord Webhook Action
         uses: sarisia/actions-status-discord@v1
