--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   cupertino_icons: ^1.0.2
 
   flutter_svg: ^2.0.9
-  go_router: ^12.1.1
+  go_router: ^13.2.2
   pedometer: ^4.0.1
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
@@ -33,6 +33,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   hive_generator: ^2.0.1
+  datadog_flutter_plugin: 2.4.0
 
 dev_dependencies:
   flutter_test:
