--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   hive_flutter: ^1.1.0
   hive_generator: ^2.0.1
   datadog_flutter_plugin: ^2.4.0
+  flutter_native_splash: ^2.4.0
 
 dev_dependencies:
   flutter_test:
@@ -79,3 +80,11 @@ flutter:
           weight: 800
         - asset: assets/fonts/Pretendard-Black.otf
           weight: 900
+
+flutter_native_splash:
+  color: "#FFFFFF"
+  image: assets/image/core_icon/splash_logo.png
+
+  android_12:
+    color: "#FFFFFF"
+    image: assets/image/core_icon/splash_logo.png
