FEAT :: video_player 패키지 추가

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   hive_generator: ^2.0.1
   datadog_flutter_plugin: ^2.4.0
   flutter_native_splash: ^2.3.10
+  video_player: ^2.8.6
+  chewie: ^1.8.1
 
 dev_dependencies:
   flutter_test:
