--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   datadog_flutter_plugin: ^2.4.0
   flutter_native_splash: ^2.3.10
   video_player: ^2.8.6
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
