--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_native_splash: ^2.3.10
   video_player: ^2.8.6
   cached_network_image: ^3.3.1
+  get_it: ^7.7.0
 
 dev_dependencies:
   flutter_test:
