--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,6 @@ dependencies:
   json_annotation: ^4.8.1
   flutter_riverpod: ^2.4.9
   camera: ^0.10.5+9
-  fluttertoast: ^8.2.4
   intl: ^0.19.0
   google_sign_in: ^6.2.1
   kakao_flutter_sdk_user: ^1.8.0
@@ -38,6 +37,7 @@ dependencies:
   video_player: ^2.8.6
   cached_network_image: ^3.3.1
   get_it: ^7.6.7
+  top_snackbar_flutter: ^3.1.0
 
 dev_dependencies:
   flutter_test:
